# Nikhil-Srivastava-Netflix

./: .gitignore  pytest.ini
.windsurf/rules/: componentrules.md
client/web/: package.json  pnpm-lock.yaml
client/web/src/: App.tsx  index.css
client/web/src/api/: authapi.ts  moviesapi.ts
client/web/src/api/types/: auth.ts  movies.ts
client/web/src/components/: Navbar.tsx  checkauth.tsx
client/web/src/components/admin/: MovieCard.tsx  MovieForm.tsx  Sidebar.tsx
client/web/src/components/layout/: AuthLayout.tsx  MainLayout.tsx  Navbar.tsx
client/web/src/components/movies/: AddMovieForm.tsx  MovieDetails.tsx  VideoPlayer.tsx
client/web/src/pages/: Home.tsx  MovieDetailsPage.tsx  UIShowcase.tsx
client/web/src/pages/admin/: AddMovie.tsx  AdminDashboard.tsx
client/web/src/pages/auth/: Login.tsx  Signup.tsx
client/web/src/store/: authstore.ts  moviestore.ts
client/web/src/ui/: index.ts
client/web/src/ui/Avatar/: Avatar.tsx
client/web/src/ui/Badge/: Badge.tsx
client/web/src/ui/Button/: Button.tsx
client/web/src/ui/Card/: Card.tsx
client/web/src/ui/Checkbox/: Checkbox.tsx
client/web/src/ui/Dropdown/: Dropdown.tsx
client/web/src/ui/Form/: Form.tsx
product/: api.md  architecture.md  specs.md
server/: __init__.py  app.db  db.py  main.py  pyproject.toml  security.py
server/models/: movie.py  user.py
server/routes/: auth.py  movies.py
server/schema/: auth.py  movie.py  user.py
server/services/: cloudinary_uploader.py  hls_transcoder.py
server/tests/: conftest.py  test_auth.py  test_movies.py
server/usecases/: auth.py  movies.py
(+13 files in other folders)
